docs: type all import operation responses
